--- a/config/environments/local/config.json
+++ b/config/environments/local/config.json
@@ -1,7 +1,7 @@
 {
   "gnosisdb": {
-    "protocol": "https",
-    "host": "13.57.73.45",
+    "protocol": "http",
+    "host": "0.0.0.0",
     "port": 5432
   },
   "ethereum": {
